--- a/Cypress/package.json
+++ b/Cypress/package.json
@@ -1,5 +1,16 @@
 {
+  "scripts": {
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run",
+    "report:merge": "mochawesome-merge cypress/reports/json/*.json > cypress/reports/json/output.json",
+    "report:generate": "marge cypress/reports/json/output.json -f report -o cypress/reports/html",
+    "test": "npm run cypress:run && npm run report:merge && npm run report:generate"
+  },
   "devDependencies": {
-    "cypress": "^13.16.0"
+    "cypress": "^13.16.0",
+    "cypress-mochawesome-reporter": "^3.8.1",
+    "mochawesome": "^7.1.3",
+    "mochawesome-merge": "^4.3.0",
+    "mochawesome-report-generator": "^6.2.0"
   }
 }
